<resources>
    <string name="app_name">TODO_12</string>
    <string name="donut">Donuts are glazed and sprinkled with candy</string>
    <string name="sandwich">Ice cream sandwiches have chocolate waffles and vanilla filling</string>
    <string name="froyo">Froyo is premium self-serve frozen yogurt</string>
    <string name="order">You have ordered a donut</string>
    <string name="order2">You have ordered an Ice cream sandwich</string>
    <string name="order3">You have ordered a Froyo</string>
    <string name="sameday">Same day messenger service</string>
    <string name="nextday">Next day ground service</string>
    <string name="pickup"> Pick up</string>
    <string name="contact">You selected contact</string>
    <string name="fav">You selected Favourite</string>
    <string name="status">You selected status</string>
    <string-array name="dropDown">
        <item> Home</item>
        <item> Work</item>
        <item> Mobile</item>
        <item> Other</item>

    </string-array>


</resources>