<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_marginStart="60dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="120dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone"

            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Note"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/note"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="Choose a delivery Method:"
        android:textAlignment="center"
        android:textSize="22sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="Delivery"
            android:text="@string/sameday" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Delivery"
            android:text="@string/nextday" />

        <RadioButton
            android:id="@+id/Pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Delivery"
            android:text="@string/pickup" />

    </RadioGroup>


</LinearLayout>